@@ -6,10 +6,15 @@ use warnings;
 use vars qw($VERSION);
 use base qw/DBIx::Class::Componentised Class::Accessor::Grouped/;
 
+
 sub mk_classdata { 
-    my $self = shift;
-    $self->mk_group_accessors('inherited', $_[0]); 
-    $self->set_inherited(@_) if @_ > 1;
+  shift->mk_classaccessor(@_);
+}
+
+sub mk_classaccessor {
+  my $self = shift;
+  $self->mk_group_accessors('inherited', $_[0]); 
+  $self->set_inherited(@_) if @_ > 1;
 }
 
 sub component_base_class { 'DBIx::Class' }
